--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "clockbox",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "A time-based data store",
   "main": "./dist/index.js",
   "scripts": {
     "test": "mocha --compilers js:6to5/register",
-    "prepublish": "6to5 -d dist lib",
-    "postinstall": "6to5 -d dist lib"
+    "prepublish": "./node_modules/.bin/6to5 -d dist lib",
+    "postinstall": "./node_modules/.bin/6to5 -d dist lib"
   },
   "repository": {
     "type": "git",
